Fixes extra padding on session name

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -28,7 +28,6 @@
 
 .session {
 	font-weight: 300;
-	margin-left: 30px;
 }
 
 .camera-selector {
